syntax = "proto3";

package api.auth;

service AuthService {
    
    rpc auth (ReqAuth) returns (ResAuth) { }

    rpc update (Stub) returns (ResAuth) { }

    rpc getCertStream (Stub) returns (stream GetCertStreamReAuth) { }
}

message ReqAuth {
    string email = 1;
    string password = 2;
}

message ResAuth {
    string token = 1;
}

message GetCertStreamReAuth {
    string key = 1;
}

message Stub {

}
